--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: rgb(231, 238, 238) !important;
+}
+
+
+.background-grey{
+    background-color: rgb(231, 240, 240) !important;
+}
+
+.border-none{
+    border: none;
+}
+
+.min-height-80 {
+min-height: 80px;
+}
