--- a/src/app/pages/articles/page-article/page-article.component.html
+++ b/src/app/pages/articles/page-article/page-article.component.html
@@ -1,1 +1,23 @@
-<p>page-article works!</p>
+<div class="col">
+    <div class="row m-3">
+        <div class="col-md-8 p-0">
+            <h1>Liste des articles</h1>
+        </div>
+        <div class="col-md-4 text-right">
+            <app-bouton-action></app-bouton-action>
+        </div>
+    </div>
+    <div class="col row m-3">
+        <app-detail-article></app-detail-article>
+        <app-detail-article></app-detail-article>
+        <app-detail-article></app-detail-article>
+        <app-detail-article></app-detail-article>
+        <app-detail-article></app-detail-article>
+        <app-detail-article></app-detail-article>
+    </div>
+    <div class="row mb-3">
+        <div class="col-md-12 text-center ">
+            <app-pagination></app-pagination>
+        </div>
+    </div>
+</div>
